adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo consequuntur, dolores quaerat veritatis aliquid temporibus repudiandae provident soluta illum quibusdam voluptas, porro, cumque vel beatae dicta impedit adipisci doloribus quos.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa facilis odit dolor, vel accusamus odio possimus voluptas laboriosam mollitia rerum! At voluptate ab molestias beatae dolorum deserunt, excepturi est esse.</p>
 </body>
 </html>
